--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,14 @@ html,body{
   font-family: Nunito,"Nunito Black","Nunito ExtraBold","Nunito SemiBold", sans-serif !important;
 }
 
+.darken{
+  width:100%;
+  height:100%;
+  position:fixed;
+  background: rgba(0, 0, 0, 0.45);
+  z-index: 2;
+}
+
 /* #####################################  START OF NAVBAR  ###################################### */
 
 .navbar{
@@ -16,6 +24,7 @@ html,body{
   background: linear-gradient( to right, #4E35F2, #5A35F2);
   width:100%;
   position:relative;
+  z-index: 3;
 }
 
 .navbar--wrapper{
@@ -50,6 +59,80 @@ html,body{
 
 .navbar--user--menu{
   display:flex;
+    cursor: pointer;
+}
+
+.navbar--dropdown--container{
+  position: absolute;
+  right: 10%;
+  top: 55px;
+  z-index: 5;
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
+  border-radius:0 0 5px 5px;
+  background:white;
+  width: 350px;
+  height: 200px;
+  opacity:0;
+}
+
+.navbar--dropdown--content{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height:100%;
+  opacity:0;
+
+ }
+
+.dropdown--menu--link{
+  margin:10px;
+  font-weight:700;
+}
+
+.menu--arrow{
+    transition:0.2s;
+}
+
+.rotate-arrow{
+    transform:rotate(90deg);
+    transition:0.2s;
+}
+
+.menu-collapsed{
+    animation-name:collapseMenu;
+    animation-duration: 0.5s;
+    animation-delay: 0.2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes collapseMenu {
+    from{
+        width: 0;
+        height: 0;
+        opacity:0;
+    }
+    to{
+        width: 350px;
+        height: 200px;
+        opacity:1;
+    }
+}
+
+.fadeIn{
+    animation-name:fadeInAnim;
+    animation-duration: 1s;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnim{
+    from{
+        opacity:0;
+    }
+    to{
+        opacity:1;
+    }
 }
 
 /* #####################################  END OF NAVBAR  ###################################### */
@@ -152,7 +235,6 @@ html,body{
 .assets--search--filter input::placeholder{
   color: #797979;
   font-family: "Nunito SemiBold",sans-serif;
-
 }
 
 .assets--sort--filter{
@@ -168,9 +250,7 @@ html,body{
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.24);
   padding-left:10px;
   color: #797979;
-
 }
-
 
 .asset--container{
   margin-left:25px;
@@ -232,6 +312,10 @@ html,body{
 .asset--change{
   font-weight: 700;
   color:#21AC00;
+}
+
+.asset--image{
+  height:50px;
 }
 
 /* #####################################  END OF ASSETS  ###################################### */
