--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,6 +48,7 @@ html,body{
 
 .navbar--content--right{
   display:flex;
+  align-items:center;
 }
 
 .navbar--link{
@@ -55,6 +56,18 @@ html,body{
   margin-right:20px;
   color:white;
   font-family: "Nunito ExtraBold", sans-serif;
+}
+
+.navbar--link-button{
+    margin-right:25px;
+    color:white;
+    font-family: "Nunito ExtraBold", sans-serif;
+    border: 0;
+    height: 35px;
+    width: 119px;
+    border-radius: 3px;
+    background: #07ab33;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
 }
 
 .navbar--user--menu{
@@ -134,6 +147,7 @@ html,body{
         opacity:1;
     }
 }
+
 
 /* #####################################  END OF NAVBAR  ###################################### */
 
@@ -268,10 +282,24 @@ html,body{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  transition:0.2s;
+  cursor:pointer;
+}
+
+.asset:hover{
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.28);
+    transition:0.2s;
+    transform:scale(1.01)perspective(1px);
+}
+
+.asset:hover > .asset--blue--line{
+    transition:0.2s;
+    width:0;
 }
 
 .asset--blue--line{
   width:10px;
+  transition:0.2s;
   background: #4E35F2;
   left:0;
   top:0;
@@ -319,3 +347,134 @@ html,body{
 }
 
 /* #####################################  END OF ASSETS  ###################################### */
+
+/* #####################################  START OF LOGIN  ###################################### */
+
+.login--page{
+    width:100%;
+    height:100vh;
+    background:red;
+    background: linear-gradient( to right, #4E35F2, #8A28FB);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.login--container{
+    min-width:500px;
+    background:white;
+    border-radius:15px;
+    box-shadow: 0 0 11px rgba(0, 0, 0, 0.40);
+    position:relative;
+}
+
+.login--content{
+    margin:35px;
+}
+
+
+.login--content--title--container{
+    width:100%;
+    height:80px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.login--content--title{
+    color:#5B32F4;
+    font-weight:700;
+    font-size:29px;
+}
+
+.login--content--form--container input{
+    width:98%;
+    margin-top:20px;
+    margin-bottom:15px;
+    height:35px;
+    border:0;
+    background-color:white;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.22);
+    padding-left:10px;
+    border-radius:5px;
+}
+
+input:focus{
+    outline: none;
+}
+button:focus{
+    outline: none;
+}
+
+
+.remember--me--container{
+    display:flex;
+    margin-top:20px;
+    flex-direction: row;
+    align-items: center;
+}
+
+
+.remember--me--label{
+    font-family: "Nunito SemiBold", sans-serif;
+    font-size:12px;
+    margin-left:5px;
+    color: #747474;
+}
+
+.forgot--password--label{
+    font-family: "Nunito SemiBold", sans-serif;
+    font-size:12px;
+    color: #747474;
+    margin-left: auto;
+}
+
+.sign--in--button--container{
+    margin-top:50px;
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.sign--in--button{
+    border:none;
+    padding:12px 43px;
+    color:white;
+    font-weight:700;
+    font-size:17px;
+    border-radius:4px;
+    background:#772CF8;
+}
+
+
+.sign--up--here--container{
+    display:flex;
+    justify-content: center;
+    margin-top:30px;
+    font-size:13px;
+    font-family: "Nunito SemiBold", sans-serif;
+}
+
+.sign--up--here--link{
+    margin-left:5px;
+}
+
+
+@media screen and (max-width: 700px) {
+    .login--container{
+        min-width:87%;
+    }
+    .login--content{
+        margin:25px;
+    }
+    .login--container{
+        margin-bottom:50px;
+    }
+}
+
+/* #####################################  END OF LOGIN  ###################################### */
