--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,7 +46,18 @@ html,body{
 
 .navbar--content--left{
   display: flex;
-  cursor:pointer;
+    flex-direction: column;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar--content--left a{
+    flex-direction: column;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .navbar--content--right{
@@ -662,46 +673,156 @@ button:focus{
     height:100%;
 }
 
-.graph--content img{
-    width:100%;
-    max-width:100%;
+.graph--content article div{
+    width:100% !important;
 }
+
+.graph--content article div div{
+    width:100% !important;
+}
+
 
 
 .asset--details--container{
     width:100%;
     margin-top:15px;
-    margin-bottom:100px;
 }
 
 .asset--details--inner--container{
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
     border-radius:5px;
-    height:183px;
     margin:0 10% 0 10%;
 }
 
 .asset--details--content{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 30px 0 30px;
+}
 
+.asset--detail--header{
+    font-weight: 700;
+}
+
+.asset--details--image{
+    height:80px;
 }
 
 
+.transactions--and--notes--container{
+    width:100%;
+    margin-top:13px;
+    margin-bottom:50px;
+}
 
+.transactions--and--notes--inner--container{
+    margin: 0 10% 0 10%;
+    border-radius: 5px;
+    position: relative;
+}
 
+.transactions--and--notes--content{
+    display:flex;
+    justify-content: space-between;
+}
 
+.transactions--container{
+    width:66%;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
+    border-radius: 5px;
+    position:relative;
+}
 
+.transactions--content{
+    margin: 0 25px 0 35px;
+}
 
+.transactions--container--title{
+    font-weight:700;
+    margin-left:35px;
+}
 
+.notes--container--title{
+    font-weight:700;
+    margin-left:35px;
+}
 
+.notes--container{
+    width:33%;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
+    border-radius: 5px;
+    position:relative;
+}
 
+.notes--content{
+    margin: 0 25px 0 35px;
+}
 
+.transaction{
+    width:100%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.24);
+    height:55px;
+    margin-bottom:20px;
+    position: relative;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition:0.2s;
+    cursor:pointer;
+    margin-top:20px;
 
+}
 
+.transaction--content{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left:30px;
+    margin-right:30px;
+}
 
+.transaction--value{
+    font-weight: 700;
+    color: #525252;
+    font-size:15px;
+}
 
+.transaction--amount{
+    font-weight: 700;
+    color: #525252;
+    font-size:15px;
+}
 
+.transaction--change{
+    font-weight: 700;
+    color: #525252;
+    font-size:15px;
+}
 
+.note{
+    width:100%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.24);
+    height:35px;
+    margin-bottom:20px;
+    position: relative;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition:0.2s;
+    cursor:pointer;
+    margin-top:20px;
 
+}
+
+.note--content{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left:20px;
+    margin-right:20px;
+}
 
 
 
