--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,7 +72,7 @@ html,body{
   font-family: "Nunito ExtraBold", sans-serif;
 }
 
-.navbar--link-button{
+.navbar--link--button{
     margin-right:25px;
     color:white;
     font-family: "Nunito ExtraBold", sans-serif;
@@ -82,6 +82,7 @@ html,body{
     border-radius: 3px;
     background: #07ab33;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
+    cursor:pointer;
 }
 
 .navbar--user--menu{
@@ -480,6 +481,7 @@ button:focus{
     font-size:17px;
     border-radius:4px;
     background:#772CF8;
+    cursor:pointer;
 }
 
 
@@ -538,7 +540,7 @@ button:focus{
 }
 
 .register--content{
-    margin:35px;
+    margin: 8px 25px;
 }
 
 
@@ -692,6 +694,7 @@ button:focus{
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
     border-radius:5px;
     margin:0 10% 0 10%;
+    position:relative;
 }
 
 .asset--details--content{
@@ -813,7 +816,8 @@ button:focus{
     transition:0.2s;
     cursor:pointer;
     margin-top:20px;
-
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .note--content{
@@ -824,6 +828,183 @@ button:focus{
     margin-right:20px;
 }
 
+.note--title{
+    background: -webkit-linear-gradient(right, rgb(130, 130, 130), black);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 
 
 /* #####################################  END OF ASSETPAGE  ###################################### */
+
+/* #####################################  START OF ADDASSETPAGE  ###################################### */
+
+
+.add--asset--page{
+    width:100%;
+    height:92vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.add--asset--container{
+    height:85%;
+    width:80%;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
+    border-radius: 5px;
+    position:relative;
+
+}
+
+.add--asset--content{
+    width:100%;
+    height:100%;
+    position: relative;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.vertical--line{
+    background: rgb(220, 220, 220);
+    width:1px;
+    height:85%;
+}
+
+.add--asset--content--left{
+    width:50%;
+    height:100%;
+    position: relative;
+}
+
+.add--asset--content--right{
+    width:50%;
+    height:100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.add-asset--content--left--title{
+    color:#725EF2;
+    margin-left:10%;
+    margin-top:50px;
+    font-family: "Nunito ExtraBold",sans-serif;
+    font-size:21px;
+}
+
+
+.add--asset--blue--line{
+    position:absolute;
+    width:14px;
+    top:0;
+    left:0;
+    height:100%;
+    background:#4E35F2;
+    border-radius: 5px 0 0 5px;
+    transition:0.2s;
+}
+
+
+.add--asset--select--filter{
+    margin-left:10%;
+    margin-top:50px;
+    margin-right:10%;
+}
+
+.add--asset--select--filter input{
+    width:100%;
+    height:30px;
+    border:1px solid #725EF2;
+    padding-left:10px;
+    color: #725EF2;
+}
+
+.add--asset--select--image--container{
+    display:flex;
+    justify-content: center;
+    margin-top:15%;
+}
+
+.add--asset--select--image--content{
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);
+    width:30%;
+    height:auto;
+    border-radius: 50%;
+    padding-top: 30%;
+    position:relative;
+}
+
+.add--asset--image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.add--asset--input--form {
+    flex:2;
+}
+
+.add--asset--input--form label{
+    display:flex;
+    margin-top:50px;
+    color: #725EF2;
+    margin-left: 10%;
+    font-family: "Nunito ExtraBold",sans-serif;
+    font-size: 18px;
+    align-items: center;
+}
+
+.add--asset--input--form input{
+    height: 27px;
+    border: 1px solid #725EF2;
+    color: #725EF2;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: right;
+    padding-right:8px;
+    flex:2;
+}
+
+.add--asset--buttons--container{
+    width:100%;
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.add--asset--cancel--button{
+    margin-right:20px;
+    padding:4px 40px;
+    font-family:"Nunito ExtraBold",sans-serif;
+    color:#725EF2;
+    border:4px solid #725EF2;
+    background:transparent;
+    border-radius:3px;
+    font-size:16px;
+    cursor:pointer;
+}
+
+.add--asset--accept--button{
+    margin-left:20px;
+    padding:8px 40px;
+    margin-right: 10%;
+    font-family:"Nunito ExtraBold",sans-serif;
+    color:white;
+    border:0;
+    background:#725EF2;
+    border-radius:3px;
+    font-size:16px;
+    cursor:pointer;
+}
+
+
+
+
+/* #####################################  END OF ADDASSETPAGE  ###################################### */
