--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,6 +83,12 @@ html,body{
     background: #07ab33;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
     cursor:pointer;
+    transition:0.2s;
+}
+
+.navbar--link--button:hover{
+    transition:0.2s;
+    background:#0dd643;
 }
 
 .navbar--user--menu{
@@ -897,6 +903,28 @@ button:focus{
     align-items: center;
 }
 
+.add--asset--inner--content{
+    width:100%;
+    height:100%;
+    position: relative;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fade--out{
+    animation:fade-out 0.3s forwards;
+}
+
+@keyframes fade-out{
+    from{
+        opacity:1;
+    }
+    to{
+        opacity:0;
+    }
+}
+
 .vertical--line{
     background: rgb(220, 220, 220);
     width:1px;
@@ -925,16 +953,6 @@ button:focus{
     font-size:21px;
 }
 
-.add--asset--blue--line{
-    position:absolute;
-    width:14px;
-    top:0;
-    left:0;
-    height:100%;
-    background:#4E35F2;
-    border-radius: 5px 0 0 5px;
-    transition:0.2s;
-}
 
 .add--asset--select--filter{
     margin-left:10%;
@@ -978,7 +996,7 @@ button:focus{
 
 .add--asset--input--form label{
     display:flex;
-    margin-top:50px;
+    margin-top:40px;
     color: #725EF2;
     margin-left: 10%;
     font-family: "Nunito ExtraBold",sans-serif;
@@ -990,7 +1008,7 @@ button:focus{
     height: 27px;
     border: 1px solid #725EF2;
     color: #725EF2;
-    width: 80%;
+    width: 100%;
     margin-left: 10%;
     margin-right: 10%;
     text-align: right;
@@ -1032,5 +1050,90 @@ button:focus{
     cursor:pointer;
 }
 
+.vertical--line--add--asset{
+    background: rgb(220, 220, 220);
+    width:1px;
+    height:85%;
+}
+
+.add--asset--blue--line{
+    position:absolute;
+    width:14px;
+    top:0;
+    left:0;
+    height:100%;
+    background:#4E35F2;
+    border-radius: 5px 0 0 5px;
+    transition:0.2s;
+    z-index:2;
+}
+
+.asset--added--animate{
+    animation: asset--added 0.8s forwards;
+}
+
+@keyframes asset--added{
+    from{
+        width:14px;
+        border-radius:5px 0 0 5px;
+    }
+    to{
+        width:100%;
+        border-radius:5px;
+    }
+}
+
+.asset--added--success--container{
+    position: absolute;
+    z-index:1000;
+    width:100%;
+    height:100%;
+}
+.asset--added--success--content{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height:100%;
+
+}
+
+.asset--added--success--content h1{
+    color:white;
+    opacity:0;
+    animation-name:fadeIn;
+    animation-duration:0.8s;
+    animation-fill-mode: forwards;
+    animation-delay:0.8s;
+}
+
+.asset--added--success--content button{
+    margin-left:20px;
+    padding:8px 40px;
+    margin-top:30px;
+    margin-right: 10%;
+    font-family:"Nunito ExtraBold",sans-serif;
+    color:#725EF2;
+    border:0;
+    background:white;
+    border-radius:3px;
+    font-size:16px;
+    cursor:pointer;
+    opacity:0;
+    animation-name:fadeIn;
+    animation-duration:0.8s;
+    animation-fill-mode: forwards;
+    animation-delay:1s;
+}
+
+
+@keyframes fadeIn{
+    from{
+        opacity:0;
+    }
+    to{
+        opacity:1;
+    }
+}
 
 /* #####################################  END OF ADDASSETPAGE  ###################################### */
