--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,8 @@
 html,body{
   width:100%;
   margin:0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .App{
