--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1195,8 +1195,6 @@ button:focus{
     color: #725EF2;
     border: 0;
     outline: 0;
-    top: 95px;
-    position: absolute;
     border-bottom: 1px solid black;
 
 }
@@ -1221,6 +1219,29 @@ button:focus{
     top: 0;
     left: 0;
     width: 100%;
+}
+
+.add--asset--list--loader{
+    width: 70px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-85%, -30%);
+}
+
+.add--asset--content--right--loader--background{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: #ffffffeb;
+}
+
+.add--asset--form--loader{
+    width: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .add--asset--current--price{
